create price display

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,7 +11,7 @@ h1 {
     text-align: center;
 }
 
-.prince-container {
+.price-container {
     text-align: center;
 }
 
@@ -56,5 +56,35 @@ h1 {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #4CAF50;
+
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #4CAF50;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Added Prices display */
+
+.price-display {
+    display: block;
+    justify-content: center;
+
+}
+
+.price {
+    font-size: 2em;
+    font-weight: bold;
+    margin: 0 15px;
+    color: #333;
 }
 
