--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,11 +23,16 @@ h1 {
 
 .toggle-label {
     font-weight: bold;
+    margin: 0 15px;
+    color: #333;
 }
 
 .switch {
     position: relative;
     display: inline-block;
+    width: 60px;
+    height: 24px;
+    
 }
 
 .switch input {
@@ -44,6 +49,7 @@ h1 {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
+    border-radius: 10%;
 }
 
 .slider:before {
@@ -56,6 +62,22 @@ h1 {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
+}
+
+.slider.round:before {
+    content: "";
+    position: absolute;
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.4s;
+}
+
+.slider:checked.round:before {
+    transform: translate(26px);
 }
 
 input:checked + .slider {
@@ -76,7 +98,7 @@ input:checked + .slider:before {
 /* Added Prices display */
 
 .price-display {
-    display: block;
+    display: flex;
     justify-content: center;
 
 }
