--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -111,6 +111,10 @@ input:checked + .slider:before {
     color: #333;
 }
 
+p {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+
 /* Create card container */
 .card-container {
     display: block;
@@ -119,7 +123,6 @@ input:checked + .slider:before {
     margin-left: 30rem;
     justify-content: center;
     margin-top: 50px;
-    font-style: italic;
     text-align: center;
     padding: 20px;
     background-color: lemonchiffon;
@@ -141,4 +144,13 @@ input:checked + .slider:before {
       margin-left: 1rem; 
       width: 38vh;
     }
+  }
+
+  /* style button */
+
+  .button-style {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: medium;
+    color:aliceblue;
+    background-color: #4CAF50;
   }
